profile update successfull

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "zod": "^3.24.2"
   },
   "scripts": {
-    "start:prod": "node ./dist/index.js",
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "start:prod": "node ./dist/server.js",
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc"
   },
   "devDependencies": {
