--- a/.env
+++ b/.env
@@ -12,8 +12,11 @@ VIMEO_ACCESS_TOKEN=d04de225245cbc3c52133c461206efb7
 CLOUDINARY_CLOUD_NAME=dgnkped3d
 CLOUDINARY_API_KEY=117555863214944
 CLOUDINARY_API_SECRET=A_TCvqdDcz3b_6DpZJSIMdapdMo
-FRONTEND_URL = http://localhost:5173
-# FRONTEND_URL = https://single-teacher.netlify.app
+# FRONTEND_URL = http://localhost:5173
+FRONTEND_URL = https://single-teacher.netlify.app
+EMAIL_USER = mdsaifulisalmrafel@gmail.com
+APP_NAME = শিক্ষা প্লাটফর্ম
+
 
 VDO_CIPHER_SECRET=a1b2c3d4e5
 VDO_CIPHER_FOLDER_ID=ca038407e1b0xxxxxxxxxxxxxxxxxxxx
