--- a/.env
+++ b/.env
@@ -14,8 +14,8 @@ CLOUDINARY_CLOUD_NAME=dgnkped3d
 CLOUDINARY_API_KEY=117555863214944
 CLOUDINARY_API_SECRET=A_TCvqdDcz3b_6DpZJSIMdapdMo
 # FRONTEND_URL = https://single-teacher.netlify.app
-# FRONTEND_URL = https://single.alokshikha.com
-FRONTEND_URL = http://localhost:5173
+FRONTEND_URL = https://single.alokshikha.com
+# FRONTEND_URL = http://localhost:5173
 EMAIL_USER = mdsaifulisalmrafel@gmail.com
 APP_NAME = শিক্ষা প্লাটফর্ম
 
